# velocity-studio

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: export.rs  mod.rs  telemetry.rs  video.rs
apps/desktop/src/components/editor/: CanvasArea.tsx  CircuitMapInspector.tsx  EditorToolbar.tsx  LapTimerInspector.tsx  LeftPanel.tsx  ResizeHandle.tsx  RightPanel.tsx  SpeedometerInspector.tsx  TelemetryPanel.tsx  VideoImportPanel.tsx  VideoPreview.tsx  WidgetCanvas.tsx
apps/desktop/src/components/export/: ExportModal.tsx  ExportOverlay.tsx
apps/desktop/src/components/timeline/: TimelinePanel.tsx
apps/desktop/src/components/ui/: Icon.tsx  TitleBar.tsx
apps/desktop/src/hooks/: useAutoSave.ts  useExport.ts  useSessionRestore.ts  useTelemetryExtraction.ts  useVideoImport.ts
apps/desktop/src/lib/: tauri.ts
apps/desktop/src/pages/: EditorScreen.tsx  WelcomeScreen.tsx
apps/desktop/src/store/: useAppStore.ts  useProjectStore.ts
apps/desktop/src/styles/: globals.css
