[package]
name = "velocity-studio"
version = "0.1.0"
description = "Velocity Studio - Cinematic Telemetry Overlay"
authors = ["Velocity Studio"]
edition = "2021"

[lib]
name = "velocity_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "velocity-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
